# $Id$
include $(top_builddir)/Make.defs

MAINTAINERCLEANFILES = Makefile Makefile.in

pkglib_LTLIBRARIES = mod_httpd.la
mod_httpd_la_LDFLAGS = -module -avoid-version -no-undefined \
                       $(APR_LDFLAGS) $(APU_LDFLAGS)
mod_httpd_la_LIBADD  = $(libdir)/libcommon_core.la \
                       $(libdir)/libcommon_util.la
                       $(APR_LIBS) $(APU_LIBS) 
mod_httpd_la_CFLAGS  = $(APR_CPPFLAGS) $(APR_CFLAGS) \
                       $(APR_INCLUDES) $(APU_INCLUDES)
mod_httpd_la_SOURCES = mod_httpd.c mod_httpd.h \
                       connection.c connection.h \
                       core.c core.h \
                       filter.c filter.h \
                       http_config.c http_config.h \
                       http_core.c http_core.h \
                       http_filter.c http_filter.h \
                       http_protocol.c http_protocol.h \
                       http_request.c http_request.h \
                       http_util.c http_util.h \
                       listen.c listen.h \
                       log.c log.h \
                       protocol.c protocol.h \
                       request.c request.h \
                       util_cfgtree.c util_cfgtree.h \
                       util_filter.c util_filter.h \
                       util_string.c util_string.h \
                       util_time.c util_time.h \
                       exports.c export_var.h


#mod_httpd_test_handler_la_LDFLAGS = -module -avoid-version $(APR_LDFLAGS) $(APU_LDFLAGS)
#mod_httpd_test_handler_la_LIBADD = $(APR_LIBS) $(APU_LIBS)
#mod_httpd_test_handler_la_CFLAGS = $(APR_CFLAGS) $(APR_INCLUDES) $(APU_INCLUDES)
#mod_httpd_test_handler_la_SOURCES = mod_httpd_test_handler.c \
#					mod_httpd_test_handler.h 

#test_main_SOURCES = test_main.c $(mod_httpd_la_SOURCES)
#test_main_LDFLAGS = -rdynamic $(DYN_LIB) $(APR_LIB) $(THREAD_LIB)
#test_main_LDADD = mod_httpd.la \
#					../mod_mp/mod_mp.la \
#					../../server/libsoftbotserver.la \
#					../../platform/$(OS_TYPE)/libplatform.la

BUILT_SOURCES = delete-exports test_char.h exports.c #mod_httpd.exp

test_char.h: gen_test_char
	./gen_test_char > test_char.h
noinst_PROGRAMS = gen_test_char #test_main
gen_test_char_SOURCES = gen_test_char.c
gen_test_char_CFLAGS = $(APR_CPPFLAGS) $(APR_CFLAGS) \
                       $(APR_INCLUDES) $(APU_INCLUDES)


# 아래 exports.c, export_vars.h 관련 내용들은 httpd-2.0.54/server/Makefile.in 에서
# 차용한 것임. --2006-10-08 김정겸
#EXPORT_DIRS = $(top_srcdir)/include $(top_srcdir)/os/$(OS_DIR) $(top_srcdir)/modules/http
#EXPORT_DIRS_APR = $(APR_INCLUDEDIR) $(APU_INCLUDEDIR)
EXPORT_DIRS = .
EXPORT_DIRS_APR = 

# If export_files is a dependency here, but we remove it during this stage,
# when exports.c is generated, make will not detect that export_files is no
# longer here and deadlock.  So, export_files can't be a dependency of
# delete-exports.
delete-exports:
	@if test -f exports.c; then \
		if test -f export_files; then \
			files=`cat export_files`; \
			headers="`find $$files -newer exports.c`"; \
			if test -n "$$headers"; then \
			   echo Found newer headers. Will rebuild exports.c.; \
			   echo rm -f exports.c export_files; \
			   rm -f exports.c export_files; \
			fi; \
		else \
			rm -f exports.c; \
		fi; \
	fi

export_files:
	tmp=export_files_unsorted.txt; \
	rm -f $$tmp && touch $$tmp; \
	for dir in $(EXPORT_DIRS); do \
		ls $$dir/*.h >> $$tmp; \
	done; \
	for dir in $(EXPORT_DIRS_APR); do \
		ls $$dir/ap[ru].h >> $$tmp; \
		ls $$dir/ap[ru]_*.h >> $$tmp; \
	done; \
	sort -u $$tmp > $@; \
	rm -f $$tmp

exports.c: export_files
	$(AWK) -f $(top_srcdir)/build/make_exports.awk `cat $?` > $@

#export_vars.h: export_files
#	$(AWK) -f $(top_srcdir)/build/make_var_export.awk `cat $?` > $@

# Rule to make exp file for AIX DSOs
mod_httpd.exp: exports.c export_vars.h
	@echo "#! ." > $@
	@echo "* This file was AUTOGENERATED at build time." >> $@
	@echo "* Please do not edit by hand." >> $@
	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(mod_httpd_la_CFLAGS) $(CFLAGS) \
		exports.c | grep "ap_hack_" | grep -v apr_ | sed -e 's/^.*[)]\(.*\);$$/\1/' >> $@
	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(mod_httpd_la_CFLAGS) $(CFLAGS) \
		export_vars.h | grep -v apr_ | sed -e 's/^\#[^!]*//' | sed -e '/^$$/d' >> $@

include ../install-pkglib.mk
